[package]
name = "maven"
version = "0.0.1"
authors = ["Timo Bryant <kinchdeadalus+github@gmail.com>"]
description = """
A maven client library
"""
edition = "2018"


[dependencies]
reqwest = { version = "0.10", features = ["json"] }
log = "0.4.11"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.4.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
httpmock = "0.5.2"
tokio = { version = "0.2", features = ["full"] }
